--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/AlexRamosGlz/TypeScriptCourse#readme",
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@types/faker": "^6.6.9",
+    "@types/google.maps": "^3.54.0",
     "axios": "^0.27.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
