--- a/debug/package.json
+++ b/debug/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "sorting",
+  "name": "debug",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc build /src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
