absctract classes implemented

--- a/sorting/.vscode/tasks.json
+++ b/sorting/.vscode/tasks.json
@@ -4,9 +4,9 @@
 		{
 			"label": "tsc: build",
 			"type": "shell",
-			"command": "tsc",
+			"command": "tsc -b",
 			"windows": {
-				"command": "tsc"
+				"command": "tsc -b"
 			}
 		}
 	]
