--- a/SOLID/package.json
+++ b/SOLID/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buidl": "tsc build /src/index.ts",
+    "build": "tsc -b",
     "start": "ts-node src/index.ts"
   },
   "keywords": [],
